--- a/src/main/resources/templates/patients/new.html
+++ b/src/main/resources/templates/patients/new.html
@@ -50,6 +50,12 @@
 
             </form>
 
+            <!-- رسالة الخطأ -->
+            <div class="mt-3" th:if="${error}">
+                <div class="alert alert-danger text-center" th:text="${error}"></div>
+            </div>
+
+            <!-- رسالة النجاح -->
             <div class="mt-3" th:if="${success}">
                 <div class="alert alert-success text-center" th:text="${success}"></div>
             </div>
