--- a/src/main/resources/templates/nurse/dashboard.html
+++ b/src/main/resources/templates/nurse/dashboard.html
@@ -53,6 +53,25 @@
 </head>
 
 <body class="p-4">
+<div th:if="${subscriptionExpired}" class="modal fade show" style="display: block;" tabindex="-1" aria-modal="true" role="dialog">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-center">
+            <div class="modal-header">
+                <h5 class="modal-title text-danger"><i class="bi bi-exclamation-triangle"></i> انتهاء الاشتراك</h5>
+            </div>
+            <div class="modal-body">
+                ⚠️ اشتراك العيادة انتهى. يرجى تجديد الاشتراك للوصول للنظام.
+            </div>
+            <div class="modal-footer justify-content-center">
+                <!--                <a href="/doctor/renew-subscription" class="btn btn-success">تجديد الاشتراك</a>-->
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Backdrop -->
+<div th:if="${subscriptionExpired}" class="modal-backdrop fade show"></div>
+
 
 <div class="container">
     <h2 class="mb-2 text-center">لوحة الممرضة</h2>
